# hyprsdt

./: CLAUDE.md  Cargo.toml  install.sh  justfile
.serena/: project.yml
dev/scripts/: .env
dev/scripts/code/: fmt.sh  lint.sh  todo.sh
dev/scripts/git/: changes.sh  pre-commit.sh
dev/scripts/info/: docs.sh  loc.sh  tree.sh
dev/scripts/lib/: log.sh
dev/scripts/test/: coverage.sh  quick.sh
src/: client.rs  lib.rs  server.rs  socket.rs
src/cli/: mod.rs  send.rs  server.rs  util.rs
