[package]
name = "hyprdt"
description = "Debug terminal for hypr* ecosystem - real-time log viewer via Unix socket"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ryugen-io/hyprdt"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ctrlc"]

[lib]
name = "hyprdt"

[[bin]]
name = "hyprdt"
path = "src/bin/hyprdt.rs"
required-features = ["cli"]

[dependencies]
# Core (always)
chrono = "0.4"
colored = "2.2"
thiserror = "2.0"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
ctrlc = { version = "3.4", optional = true }

# Tracing integration (for client layer)
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
