[package]
name = "hyprsdt"
description = "Debug terminal for hypr* ecosystem - real-time log viewer via Unix socket"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ryugen-io/hyprsdt"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ctrlc", "dep:which"]

[lib]
name = "hyprsdt"

[[bin]]
name = "hyprsdt"
path = "src/bin/hyprsdt.rs"
required-features = ["cli"]

[dependencies]
# Core (always)
chrono = "0.4"
colored = "3"
thiserror = "2.0"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
ctrlc = { version = "3.5.2", optional = true }
which = { version = "8.0", optional = true }

# Tracing integration (for client layer)
tracing = "0.1"
tracing-subscriber = "0.3"
